--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Some practice with react and redux.",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --config webpack.config.js",
     "test": "test"
   },
   "repository": {
@@ -15,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/trycrmr/react-redux-practice/issues"
   },
-  "homepage": "https://github.com/trycrmr/react-redux-practice#readme"
+  "homepage": "https://github.com/trycrmr/react-redux-practice#readme",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.10.0"
+  }
 }
