Initial React/Redux working counter

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.config.js --watch",
     "test": "test"
   },
   "repository": {
@@ -19,7 +20,9 @@
   "homepage": "https://github.com/trycrmr/react-redux-practice#readme",
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -27,6 +30,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "redux-devtools": "^3.4.1",
     "webpack": "^3.10.0"
   }
 }
